# pybench

./: .gitignore  README.md  benchmark_key.pem  benchmark_report.json  benchmark_runner.py  index.html  json_to_html.py  pyproject.toml  run_all.sh  run_benchmark.sh
.github/workflows/: benchmark-aws.yml  benchmark-local.yml  benchmark.yml  create-runner-ami.yml
benchmarks/: base.py  environment.py  utils.py
benchmarks/scaling/: __init__.py  memory_bandwidth_scaling_analysis.md  numpy_compute_scaling_analysis.md  parallel_compute_scaling_analysis.md  ref_counting_scaling_analysis.md  test_lock_contention_scaling.py  test_memory_bandwidth_scaling.py  test_np_column_compute_mp.py  test_np_column_compute_thread.py  test_object_churn_local_scaling.py  test_object_churn_shared_scaling.py  test_pagerank_scaling.py  test_parallel_compute_scaling.py  test_ref_counting_local_scaling.py  test_ref_counting_shared_scaling.py  test_seq_mem_read_scaling.py  test_thread_vs_process_scaling.py  test_threading_processing.py  test_vector_ops_scaling.py
demo/: doc.md
docs/: atomic_operations_explained.md  benchmark_suite.md  core_concepts.md  free_threading_context.md  thread_setup_analysis_results.md  understanding_memory_barriers.md  understanding_thread_concepts.md
pybench.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
runs/: 20241025_004530.html  20241025_004530.json  20241025_013507.json  20241025_075114.html  20241025_075114.json
scripts/: index_template.html  install_python.sh  json_to_html.py  run_benchmarks.sh  setup_env.sh  update_index.py
(+181 files in other folders)
