[project]
name = "python-benchmark-suite"
version = "0.1.0"
description = "Benchmark suite for Python 3.12, 3.13, and 3.13t"
requires-python = ">=3.12"
dependencies = [
    "rich>=13.0.0",
    "psutil>=5.9.0"
]

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[tool.hatch.metadata]
allow-direct-references = true
